--- a/src/assets/styles/components/DateOfBirth.css
+++ b/src/assets/styles/components/DateOfBirth.css
@@ -48,12 +48,6 @@
   margin: 0;
   border-top: 1px solid gray;
 }
-.input_button_title:hover,
-.input_button_title:focus {
-  background-color: #f6c866;
-  color: white;
-  cursor: pointer;
-}
 .input_button_title-list {
   display: none;
   position: absolute;
@@ -77,7 +71,7 @@
   width: 0;
 }
 .isListDisplay {
-  border-radius: 38px 38px 0 0;
+  border-radius: 38px 38px 0 0 !important;
 }
 .isListDisplay .input_birthday-form_container_field-arrow {
   transform: rotate(180deg);
@@ -87,5 +81,26 @@
 }
 .inputReject {
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), inset 0px 4px 4px rgb(0 0 0 / 25%),
-    0 0 0 1pt #ee5353;
+    0 0 0 1pt #ee5353 !important;
+}
+.input_birthday-form_container_item:hover, .input_birthday-form_container_item:focus {
+  background-color: #f6c866;
+  color: white;
+}
+@media (max-width: 550px) {
+  .birthday-form-container {
+    margin-top: 40px;
+  }
+  .isListDisplay {
+    border-radius: 19px 19px 0 0 !important;
+  }
+  .input_button_title-list  {
+    border-radius: 0 0 19px 19px;
+  }
+  .input_birthday-form_container_item {
+    padding: 5px;
+  }
+  .isListDisplay .input_button_title-list {
+    max-height: 150px;
+  }
 }
