--- a/src/assets/styles/components/QuestionsResult.css
+++ b/src/assets/styles/components/QuestionsResult.css
@@ -1,22 +1,3 @@
-.footer-text {
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 18px;
-  text-align: center;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  color: #9d9d9d;
-  position: absolute;
-  bottom: -18px;
-}
-.footer-container {
-  position: relative;
-  width: 100%;
-}
-.footer-text:hover,
-.footer-text:focus {
-  bottom: 0;
-}
 .find-events-text {
   margin-top: 16px;
 }
@@ -56,7 +37,8 @@
     rgba(76, 217, 100, 0.9) -6.2%,
     rgba(50, 185, 73, 0.9) 100%
   );
-  margin-bottom: 90px;
+  margin-bottom: 90px !important;
+  width: 395px !important;
 }
 .forecast-block {
   border: 1px solid #ffffff;
@@ -85,4 +67,35 @@
   align-items: center;
   justify-content: center;
   padding: 35px 0 35px 0;
+}
+@media (max-width: 550px) {
+  .find-events-text {
+    max-width: 219px;
+  }
+  .resultWrapper {
+    max-width: 294px;
+  }
+  .notifyMessage__result {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .resultcomp-text {
+    font-size: 14px;
+    line-height: 16px;
+  }
+  .call-button {
+    margin-bottom: 38px !important;
+    width: 242px !important;
+  }
+  .forecast-block {
+    margin: 25px 0 19px 0;
+    max-width: 259px;
+  }
+  .forecast-block-text {
+    margin-top: 13px;
+    margin-bottom: 8px;
+  }
+  .call-to-button {
+    max-width: 233px;
+  }
 }
