--- a/src/assets/styles/components/fearOfDying.css
+++ b/src/assets/styles/components/fearOfDying.css
@@ -1,16 +1,3 @@
-.answers-button-block {
-  margin-top: 48px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.quote-block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 119px;
-  margin-bottom: 153px;
-}
 .quote_fearcomp {
   margin-top: 86px;
   margin-bottom: 92px;
@@ -21,4 +8,21 @@
 }
 .footer-container__fear {
   display: none;
+}
+@media (max-width: 550px) {
+  .step-container__fear {
+    margin-top: 53px;
+  }
+  .footer-container__fear {
+    display: block;
+  }
+  .footer-container__fear > .footer-text {
+    font-size: 7px;
+    line-height: 9px;
+    bottom: 0;
+  }
+  .quote_fearcomp {
+    margin-top: 38px;
+    margin-bottom: 39px;
+  }
 }
